<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="27dp"
    android:paddingRight="27dp"
    android:paddingBottom="20dp">

    <ImageButton
        android:id="@+id/btn_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_tutorial"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:onClick="onClick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="54.5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/roast_profile_tab_0"
                style="@style/txt_tab_prs_style"
                android:layout_width="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_height="44dp"
                android:background="@drawable/btn_tab_back_prs"
                android:gravity="center"
                android:text="@string/BASIC" />

            <TextView
                android:id="@+id/roast_profile_tab_1"
                style="@style/txt_tab_style"
                android:layout_width="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_height="44dp"
                android:background="@drawable/btn_tab_back"
                android:layout_marginLeft="7.5dp"
                android:gravity="center"
                android:text="@string/PRO" />

            <TextView
                android:id="@+id/roast_profile_tab_2"
                style="@style/txt_tab_style"
                android:layout_width="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:background="@drawable/btn_tab_back"
                android:layout_height="44dp"
                android:layout_marginLeft="7.5dp"
                android:gravity="center"
                android:text="@string/QR" />

            <TextView
                android:id="@+id/roast_profile_tab_3"
                style="@style/txt_tab_style"
                android:layout_width="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_height="44dp"
                android:layout_marginLeft="7.5dp"
                android:background="@drawable/btn_tab_back"
                android:gravity="center"
                android:text="@string/SELECT" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/roast_profile_list_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/black"
                android:dividerHeight="5dp" />

            <ListView
                android:id="@+id/roast_profile_list_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/black"
                android:dividerHeight="5dp"
                android:visibility="gone" />

            <ListView
                android:id="@+id/roast_profile_list_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/black"
                android:dividerHeight="5dp"
                android:visibility="gone" />

            <ListView
                android:id="@+id/roast_profile_list_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/black"
                android:dividerHeight="5dp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>



</RelativeLayout>