<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <ImageButton
            android:layout_centerVertical="true"
            android:id="@+id/change_pw_detail_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back"
            android:onClick="onClick"/>

        <TextView
            android:layout_centerVertical="true"
            style="@style/txt_style_medium"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/COLOR_F5F5F5"
            android:text="@string/change_password"/>

        <ImageButton
            android:id="@+id/change_pw_detail_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_btn_save"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/change_pw_edt_cur_pw"
                style="@style/txt_style_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/change_pw_view"
                android:background="@null"
                android:hint="@string/current_pw"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textColor="@color/COLOR_6B6B6B"
                android:textColorHint="@color/COLOR_6B6B6B"
                android:textSize="15dp" />

            <ImageButton
                android:id="@+id/change_pw_view"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/icon_pw_view_off" />

        </RelativeLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/COLOR_202020"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/change_pw_detail_btn_find_pw"
                android:onClick="onClick"
                style="@style/txt_style_medium"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/find_pw"
                android:textColor="@color/COLOR_RED"
                android:textSize="15dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/COLOR_202020"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/change_pw_edt_new_pw"
                android:paddingLeft="5dp"
                style="@style/txt_style_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/new_pw"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textColor="@color/COLOR_6B6B6B"
                android:textColorHint="@color/COLOR_6B6B6B"
                android:textSize="15dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/COLOR_202020"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/change_pw_edt_new_pw_confirm"
                android:paddingLeft="5dp"
                style="@style/txt_style_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/new_pw_confirm"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textColor="@color/COLOR_6B6B6B"
                android:textColorHint="@color/COLOR_6B6B6B"
                android:textSize="15dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/COLOR_202020"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/change_pw_btn_save"
            android:onClick="onClick"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_btn_base"
            android:textColor="@color/COLOR_6B6B6B"
            android:text="@string/btn_replace_pw"/>
    </LinearLayout>


</LinearLayout>